# crusher

./: README.md  makefile  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  result.md
.github/workflows/: python_package.yml
crusher/: __init__.py  crusher.py
examples/: example.json  result.md
scripts/: update.py
tests/: test_crusher.py
