[tool.isort]
profile="black"
atomic=true
extend_skip_glob="migrations,scripts"
line_length=88

[tool.black]
extend-exclude="migrations,scripts"

[tool.poetry]
name = "crusher"
version = "0.1.2"
description = "Crush a deeply nested JSON string."
authors = ["rednafi <redowan.nafi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
rich = "^10.3.0"


[tool.poetry.dev-dependencies]
black = "^21.6b0"
pytest = "^6.2.4"
tox = "^3.23.1"
pip-tools = "^6.1.0"
pytest-cov = "^2.12.1"
isort = "^5.8.0"
mypy = "^0.902"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# CLI entrypoints
[tool.poetry.scripts]
crusher = "crusher:crusher.cli_entrypoint"


[tool.tox]
legacy_tox_ini = """
# content of: tox.ini , put in same dir as setup.py
[tox]
envlist = py36,py37,py38,py39
isolated_build = True

[testenv]
# install pytest in the virtualenv where commands will be executed

deps = pytest

install_commands =
    curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python -
    poetry install --no-dev
commands =
    # NOTE: you can run any command line tool here - not just tests
    pytest -v -s
"""
